--- a/compose.yaml
+++ b/compose.yaml
@@ -1,9 +1,11 @@
 services:
   postgres:
     image: 'postgres:latest'
+    container_name: postgres_container
     environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+      POSTGRES_DB: "postgres"
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "postgres"
+      PGDATA: "/var/lib/postgresql/data/pgdata"
     ports:
-      - '5432'
+      - '5432:5432'
