--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -155,6 +155,21 @@ databaseChangeLog:
               - column:
                   name: clientEmail
                   type: varchar
+              - column:
+                  name: createdAt
+                  type: varchar
+              - column:
+                  name: updatedAt
+                  type: varchar
+              - column:
+                  name: updatedBy
+                  type: varchar
+              - column:
+                  name: spare1
+                  type: varchar
+              - column:
+                  name: spare2
+                  type: varchar
         - addAutoIncrement:
             catalogName: cat
             columnDataType: int
@@ -190,6 +205,21 @@ databaseChangeLog:
                   type: integer
               - column:
                   name: companyName
+                  type: varchar
+              - column:
+                  name: createdAt
+                  type: varchar
+              - column:
+                  name: updatedAt
+                  type: varchar
+              - column:
+                  name: updatedBy
+                  type: varchar
+              - column:
+                  name: spare1
+                  type: varchar
+              - column:
+                  name: spare2
                   type: varchar
         - addAutoIncrement:
             catalogName: cat
