--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -99,6 +99,12 @@ databaseChangeLog:
                   name: procedureName
                   type: varchar
               - column:
+                  name: procedureCost
+                  type: varchar
+              - column:
+                  name: procedureDiscount
+                  type: varchar
+              - column:
                   name: comment
                   type: varchar
               - column:
