--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -88,7 +88,7 @@ databaseChangeLog:
                   type: varchar
               - column:
                   name: date
-                  type: varchar
+                  type: date
               - column:
                   name: time
                   type: varchar
